fixed devops post

--- a/_posts/2017-09-01-devops-cadence.html
+++ b/_posts/2017-09-01-devops-cadence.html
@@ -3,7 +3,7 @@ layout: post
 title: Developing a DevOps Cadence
 ---
 
-<h2>Weekly team ops meeting<h2>
+<h2>Weekly team ops meeting</h2>
 
 <p>
 The purpose of the weekly ops meeting is to give the whole team a
