--- a/_posts/2017-09-01-devops-cadence.html
+++ b/_posts/2017-09-01-devops-cadence.html
@@ -2,10 +2,8 @@
 layout: post
 title: Developing a DevOps Cadence
 ---
-
-<h2>Weekly team ops meeting</h2>
-
 <p>
+<emph>Weekly team ops meeting</emph>
 The purpose of the weekly ops meeting is to give the whole team a
 chance to take stock of their operational health. In theory, you could
 cover all this ground in the handoff meeting with only the old and the
@@ -31,9 +29,9 @@ Here’s the cadence of a typical (half hour) team operations meeting:
 <li>Quick review of existing tickets. Are there any tickets that are over SLA?</li>
 <li>Dashboards. Pull open the dashboards for your services. Does anything look abnormal? (If so: there should be an action item to investigate). This is the part where your team learns what looks normal on their dashboards. You don’t want the first time they see the dashboard to be during an issue. Look for sudden changes, spikes, trends.</li>
 </ul>
-<h2>Handoff meeting</h2>
 
 <p>
+<mph>Handoff meeting</emph>
 The handoff is attended by the old on-call, the new on-call, and the
 on-call manager or team lead. The purpose of the meeting is to make
 sure that the new on-call has all of the context that the old on-call
@@ -56,8 +54,12 @@ Here are some common items for a handoff meeting:
 <li>Where appropriate, off-load tickets from the on-call queue into ordinary sprint or team work.</li>
 </ul>
 
-<h2>Weekly org ops meeting</h2>
-<p>The purpose of this meeting is two-fold: it helps distribute knowledge between teams, and it helps enforce an operational culture org-wide.</p>
+
+<p>
+<emph>Weekly org ops meeting</emph> The purpose of this meeting is
+two-fold: it helps distribute knowledge between teams, and it helps
+enforce an operational culture org-wide.
+</p>
 
 <p>Here’s the cadence of a typical weekly org ops meeting: </p>
 
